--- a/_includes/artworks.html
+++ b/_includes/artworks.html
@@ -10,12 +10,15 @@
     </div>
     <div class="row">
       <div class="col-md-4">
+        <div><legend>Pencil/Pastel/Ink</legend></div>
         <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/3a747c8551e2501f8d425a683908bcec.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
       </div>
       <div class="col-md-4">
+        <div><legend>Watercolor</legend></div>
         <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/981c0c41c8185330b2b39e279cfefdf7.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
       </div>
       <div class="col-md-4">
+        <div><legend>Oil Paint</legend></div>
         <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/41c6986925eb539186f7ad45ddef2570.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
       </div>
     </div>
