--- a/_includes/artworks.html
+++ b/_includes/artworks.html
@@ -9,6 +9,9 @@
       </div>
     </div>
     <div class="row">
+      <div>
+        All artworks are based on original photos and have been transformed using interactive image stylization techniques.
+      </div>
       <div class="col-md-4">
         <div><legend>Pencil/Pastel/Ink</legend></div>
         <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/3a747c8551e2501f8d425a683908bcec.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
