--- a/_includes/artworks.html
+++ b/_includes/artworks.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="row">
-      <div>
+      <div class="col-xs-12">
         All artworks are based on original photos and have been transformed using interactive image stylization techniques. The techniques are implemented and available in iOS apps by <a href="https://www.digitalmasterpieces.com">Digital Masterpieces</a>.
       </div>
       <div class="col-md-4">
