--- a/_includes/artworks.html
+++ b/_includes/artworks.html
@@ -10,7 +10,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12">
-        All artworks are based on original photos and have been transformed using interactive image stylization techniques. The techniques are implemented and available in iOS apps by <a href="https://www.digitalmasterpieces.com">Digital Masterpieces</a>.
+        All artworks are based on original photos that have been transformed using interactive image stylization techniques. The techniques are implemented and available in iOS apps published by <a href="https://www.digitalmasterpieces.com">Digital Masterpieces</a>.
       </div>
       <div class="col-md-4">
         <div><legend>Pencil/Pastel/Ink (<a href="https://apple.co/Graphite">Graphite</a>)</legend></div>
