--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,8 +1,10 @@
 header {
-  padding: 12em 0 4em; }
+  padding: 10em 0 4em; }
 
 header h1 {
-  font-size: 3em; }
+  font-size: 2.5em;
+  font-weight: bold; 
+  margin-top: -0.5em; }
 
 .portrait {
   padding: 2em 0; }
