--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@
 		    </div>
 			
 		    <div class="col-xs-3 col-md-9 form-group text-right" style="line-height:90%">
-		      <small>Hasso Plattner Institute<br>University of Potsdam, Germany<br>1997-2008<br>Dr. rer. nat., 2016<br>M. Sc., 2011<br>B. Sc., 2009<br></small>
+		      <small>Hasso Plattner Institute<br>University of Potsdam, Germany<br>Oct. 2005 - Nov. 2016<br>Dr. rer. nat., 2016<br>M. Sc., 2011<br>B. Sc., 2009<br></small>
 		    </div>
 		    <div class="col-xs-1 col-md-3">
 		      <img alt="" src="/img/hpi.png" width="100%">
