--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,11 +13,9 @@
 		<br>
 		<div class="row">
 		  <div class="col-xs-12 form-group">
-		    <p><strong>E:</strong> {{ site.data.contact.email_text }} (<a href="mailto:{{ site.data.contact.email }}">mailto</a>) | {{ site.data.contact.email2_text }} (<a href="mailto:{{ site.data.contact.email2 }}">mailto</a>)</p>
+		    <p><strong>E:</strong> {{ site.data.contact.email_text }} (<a href="mailto:{{ site.data.contact.email }}">mailto</a>)</p>
 			
 			<p><strong>A:</strong> {{ site.data.contact.address }}</p>
-			
-			<p><strong>A:</strong> {{ site.data.contact.address2 }}</p>
 			
 			<p><strong>T:</strong> {{ site.data.contact.phone }}</p>
 		  </div>
@@ -42,7 +40,7 @@
 		    </div>
 		    
 	        <div class="col-xs-4 col-md-9 form-group text-right" style="line-height:90%">
-		      <small>Hasso Plattner Institute<br>University of Potsdam, Germany<br>Post-doctoral Researcher<br>Nov. 2016 - now</span></small>
+		      <small>Hasso Plattner Institute<br>University of Potsdam, Germany<br>Post-doctoral Researcher<br>Nov. 2016 - Jan. 2023</span></small>
 		    </div>
 		    <div class="col-xs-2 col-md-3 form-group">
 		      <img alt="" src="/img/hpi.png" width="100%">
