--- a/_includes/artworks.html
+++ b/_includes/artworks.html
@@ -14,15 +14,15 @@
       </div>
       <div class="col-md-4">
         <div><legend>Pencil/Pastel/Ink (<a href="https://apple.co/Graphite">Graphite</a>)</legend></div>
-        <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/3a747c8551e2501f8d425a683908bcec.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+        <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="http://lightwidget.com/widgets/3a747c8551e2501f8d425a683908bcec.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
       </div>
       <div class="col-md-4">
         <div><legend>Watercolor (<a href="https://apple.co/3b3MwQ0">Waterbrush</a>)</legend></div>
-        <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/981c0c41c8185330b2b39e279cfefdf7.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+        <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="http://lightwidget.com/widgets/981c0c41c8185330b2b39e279cfefdf7.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
       </div>
       <div class="col-md-4">
         <div><legend>Oil Paint (<a href="https://apple.co/BeCasso">BeCasso</a>)</legend></div>
-        <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/41c6986925eb539186f7ad45ddef2570.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+        <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="http://lightwidget.com/widgets/41c6986925eb539186f7ad45ddef2570.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
       </div>
     </div>
   </div>
